add de algumas exceções