@@ -1,13 +1,16 @@
 package br.edu.ifpb.pweb2.xp.service;
 
+import br.edu.ifpb.pweb2.xp.exception.BusinessException;
+import br.edu.ifpb.pweb2.xp.exception.NotFoundException;
+import br.edu.ifpb.pweb2.xp.exception.ValidationException;
 import br.edu.ifpb.pweb2.xp.model.Corrida;
 import br.edu.ifpb.pweb2.xp.repository.CorridaRepository;
 import br.edu.ifpb.pweb2.xp.repository.PerguntaRepository;
+import br.edu.ifpb.pweb2.xp.repository.ResultadoRepository;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
 
@@ -20,28 +23,81 @@ public class CorridaService {
     @Autowired
     private PerguntaRepository perguntaRepository;
 
+    @Autowired
+    private ResultadoRepository resultadoRepository;
+
     public List<Corrida> listarTodas() {
         return repository.findAll();
     }
 
+    public List<Corrida> listarAtivas() {
+        return repository.findByAtivaTrue();
+    }
+
     public Corrida salvar(Corrida corrida) {
-        if (corrida.getNome() == null || corrida.getNome().isBlank()) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Nome da corrida é obrigatório");
+        // Validações básicas
+        if (corrida.getTitulo() == null || corrida.getTitulo().trim().isEmpty()) {
+            throw new ValidationException("O título da corrida é obrigatório");
         }
+        if (corrida.getTempoSegundos() == null) {
+            throw new ValidationException("O tempo limite é obrigatório");
+        }
+        if (corrida.getTempoSegundos() < 10) {
+            throw new ValidationException("O tempo mínimo é de 10 segundos");
+        }
+        if (corrida.getTempoSegundos() > 600) {
+            throw new ValidationException("O tempo máximo é de 600 segundos (10 minutos)");
+        }
+        
+        if (corrida.getId() == null) {
+            corrida.setAtiva(true);
+        }
+        
         return repository.save(corrida);
     }
 
     public Corrida buscarPorId(Long id) {
         return repository.findById(id)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Corrida não encontrada"));
+                .orElseThrow(() -> new NotFoundException("Corrida não encontrada com ID: " + id));
     }
 
     @Transactional
     public void excluir(Long id) {
-        buscarPorId(id);
-        perguntaRepository.deleteByCorridaId(id);
-        repository.removerVinculosParticipantes(id);
-        repository.deleteById(id);
+        Corrida corrida = buscarPorId(id);
+        
+        long totalResultados = resultadoRepository.countResultadosPorCorrida(id);
+        if (totalResultados > 0) {
+            throw new BusinessException(
+                "❌ Não é possível excluir a corrida \"" + corrida.getTitulo() + 
+                "\" pois ela já possui " + totalResultados + " resultado(s) registrado(s)."
+            );
+        }
+        
+        try {
+            perguntaRepository.deleteByCorridaId(id);
+            repository.removerVinculosParticipantes(id);
+            repository.deleteById(id);
+            
+        } catch (DataIntegrityViolationException e) {
+            throw new BusinessException(
+                "Não foi possível excluir a corrida \"" + corrida.getTitulo() + 
+                "\" pois existem dados vinculados a ela."
+            );
+        }
     }
 
+    @Transactional
+    public void alternarAtiva(Long id) {
+        Corrida corrida = buscarPorId(id);
+        corrida.setAtiva(!corrida.getAtiva());
+        repository.save(corrida);
+    }
+
+    public boolean possuiResultados(Long id) {
+        return resultadoRepository.existsByCorridaId(id);
+    }
+
+    public long contarResultados(Long id) {
+        return resultadoRepository.countResultadosPorCorrida(id);
+    }
 }
